Update navigation and add modal/tab scripts
Expanded navigation menus across multiple pages to include links to Volumes II-V and standardized the 'Logger' link. Added modal handling scripts for editing profiles in profile.html and tab switching functionality in quests.html to improve user interaction.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="quests.html">Quests</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
+                <li><a href="logger.html">Logger</a></li>
                 <li><a href="volumes/volume1.html">Volume I</a></li>
                 <li><a href="volumes/volume2.html">Volume II</a></li>
                 <li><a href="volumes/volume3.html">Volume III</a></li>
