--- a/logger.html
+++ b/logger.html
@@ -247,6 +247,10 @@
                 <li><a href="achievements.html">Achievements</a></li>
                 <li><a href="logger.html">Logger</a></li>
                 <li><a href="volumes/volume1.html">Volume I</a></li>
+                <li><a href="volumes/volume2.html">Volume II</a></li>
+                <li><a href="volumes/volume3.html">Volume III</a></li>
+                <li><a href="volumes/volume4.html">Volume IV</a></li>
+                <li><a href="volumes/volume5.html">Volume V</a></li>
             </ul>
         </nav>
 
