--- a/profile.html
+++ b/profile.html
@@ -441,7 +441,12 @@
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="quests.html">Quests</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="logger.html">Working Logger</a></li>
+                <li><a href="logger.html">Logger</a></li>
+                <li><a href="volumes/volume1.html">Volume I</a></li>
+                <li><a href="volumes/volume2.html">Volume II</a></li>
+                <li><a href="volumes/volume3.html">Volume III</a></li>
+                <li><a href="volumes/volume4.html">Volume IV</a></li>
+                <li><a href="volumes/volume5.html">Volume V</a></li>
             </ul>
         </nav>
 
@@ -831,6 +836,24 @@
         </div>
     </div>
 
+    <script>
+// Modal functions for Edit Profile
+function openEditProfile() {
+    document.getElementById('editProfileModal').style.display = 'flex';
+}
+
+function closeEditProfile() {
+    document.getElementById('editProfileModal').style.display = 'none';
+}
+
+// Close modal when clicking outside
+window.onclick = function(event) {
+    const modal = document.getElementById('editProfileModal');
+    if (event.target === modal) {
+        modal.style.display = 'none';
+    }
+}
+    </script>
     <script src="js/profile.js"></script>
 </body>
 </html>
