--- a/profile.html
+++ b/profile.html
@@ -839,16 +839,16 @@
     <script>
 // Modal functions for Edit Profile
 function openEditProfile() {
-    document.getElementById('editProfileModal').style.display = 'flex';
+    document.getElementById('editModal').style.display = 'flex';
 }
 
 function closeEditProfile() {
-    document.getElementById('editProfileModal').style.display = 'none';
+    document.getElementById('editModal').style.display = 'none';
 }
 
 // Close modal when clicking outside
 window.onclick = function(event) {
-    const modal = document.getElementById('editProfileModal');
+    const modal = document.getElementById('editModal');
     if (event.target === modal) {
         modal.style.display = 'none';
     }
